Add functionality to generate specific log amount
